# pdm-plugin

./: CMakeLists.txt  README.md  ReadMe.txt  oss-pkg-info.yaml
files/conf/: pdm.conf
src/RefPlugIn/: PdmRefPlugInImpl.cpp  PdmRefPlugInImpl.h
src/common/: IObserver.h  PdmPlugInLog.cpp  PdmPlugInLog.h  PlugInSubject.cpp  PlugInSubject.h
